--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,7 @@
   opacity: 0;
   transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
 }
+
+.transition-width {
+  transition: width 0.3s ease;
+}
