In use detail for each font, Dashboard template

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,7 @@
 .dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   @apply bg-gray-800;
 }
+
+.font-sample:hover > .info-link {
+  display: block;
+}
