--- a/src/index.css
+++ b/src/index.css
@@ -50,9 +50,16 @@
 
 
 .icon-label {
-  display: none;
+  opacity: 0;
+  transition: all 0.3s ease;
+  transition-delay: 0ms;
 }
 
 .icon:hover > .icon-label {
-  display: flex;
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+
+.icon:not(:hover) > .icon-label {
+  transition-delay: 0s;
 }
