--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,7 @@
 .icon:not(:hover) > .icon-label {
   transition-delay: 0s;
 }
+
+.ios-container {
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
