--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,26 @@
   transition-delay: 0s;
 }
 
-.ios-container {
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+.app-body {
+  position: relative;
+  top: 0;
+  top: env(safe-area-inset-top);
+  right: 0;
+  right: env(safe-area-inset-right);
+  bottom: 0;
+  bottom: env(safe-area-inset-bottom);
+  left: 0;
+  left: env(safe-area-inset-left);
+}
+
+.app-canvas {
+  position: fixed;
+  top: 0;
+  top: env(safe-area-inset-top);
+  right: 0;
+  right: env(safe-area-inset-right);
+  bottom: 0;
+  bottom: env(safe-area-inset-bottom);
+  left: 0;
+  left: env(safe-area-inset-left);
 }
